@@ -11,7 +11,7 @@
 # All configuration values have a default; values that are commented out
 # serve to show the default.
 
-import sys, os
+from loggerhead import __version__
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -45,9 +45,9 @@ copyright = u'2010, Loggerhead team (https://launchpad.net/~loggerhead-team)'
 # built documents.
 #
 # The short X.Y version.
-version = '1.17'
+version = __version__
 # The full version, including alpha/beta/rc tags.
-release = '1.17'
+release = __version__
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
